fixing last one

--- a/index.html
+++ b/index.html
@@ -108,14 +108,17 @@
                 <div id="globe-container"></div>
                 <div id="chat-input"
                     class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-3xl px-6 z-20">
-                    <form id="chat-form"
-                        class="rounded-2xl p-6" style="background: transparent; border: 1px solid transparent; box-shadow: none;">
+                    <form id="chat-form" class="rounded-2xl p-6"
+                        style="background: transparent; border: 1px solid transparent; box-shadow: none;">
                         <div class="flex items-center gap-4">
                             <div class="flex-1 relative">
-                                <input id="chat-input-field" type="text" placeholder="How can I help your shlichus today?"
+                                <input id="chat-input-field" type="text"
+                                    placeholder="How can I help your shlichus today?"
                                     class="w-full text-white placeholder-gray-400 px-6 py-4 text-lg focus:outline-none"
                                     style="background: transparent; border: 1px solid transparent; border-radius: 0.75rem;" />
-                                <div id="chat-input-bg" class="absolute inset-0 bg-gray-900/50 border border-gray-600 rounded-xl opacity-0 pointer-events-none"></div>
+                                <div id="chat-input-bg"
+                                    class="absolute inset-0 bg-gray-900/50 border border-gray-600 rounded-xl opacity-0 pointer-events-none">
+                                </div>
                             </div>
                             <button id="chat-button" type="submit"
                                 class="bg-gray-700 hover:bg-gray-600 text-white font-semibold px-8 py-4 rounded-xl transition-colors opacity-0">
