--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
             <!-- Globe Section -->
             <section class="relative" id="globe-section">
                 <div id="globe-container"></div>
+
+                <!-- Large centered text that shrinks into input -->
+                <div id="hero-text"
+                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center z-20 pointer-events-none">
+                    <h2 class="text-4xl md:text-5xl font-medium text-gray-400">How can I help your shlichus today?</h2>
+                </div>
+
                 <div id="chat-input"
                     class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-3xl px-6 z-20">
                     <form id="chat-form" class="rounded-2xl p-6"
@@ -114,7 +121,7 @@
                             <div class="flex-1 relative">
                                 <input id="chat-input-field" type="text"
                                     placeholder="How can I help your shlichus today?"
-                                    class="w-full text-white placeholder-gray-400 px-6 py-4 text-lg focus:outline-none"
+                                    class="w-full text-white placeholder-gray-400 px-6 py-4 text-lg focus:outline-none opacity-0"
                                     style="background: transparent; border: 1px solid transparent; border-radius: 0.75rem;" />
                                 <div id="chat-input-bg"
                                     class="absolute inset-0 bg-gray-900/50 border border-gray-600 rounded-xl opacity-0 pointer-events-none">
@@ -515,13 +522,23 @@
                     // Phase 1: Spin globe (0-15%)
                     .to(globe.rotation, { y: "+=2", ease: "none" }, 0)
                     .to(camera.position, { z: 180, ease: "power1.inOut" }, 0)
-                    // Phase 2: Fade in chat box elements around the text (15-25%)
-                    .to("#chat-form", { background: "rgba(31, 41, 55, 0.9)", borderColor: "rgba(55, 65, 81, 1)", boxShadow: "0 25px 50px -12px rgba(0, 0, 0, 0.25)", ease: "power1.out", duration: 0.08 }, 0.15)
-                    .to("#chat-input-bg", { opacity: 1, ease: "power1.out", duration: 0.08 }, 0.15)
-                    .to("#chat-button", { opacity: 1, ease: "power1.out", duration: 0.08 }, 0.15)
-                    .to("#chat-suggestions", { opacity: 1, ease: "power1.out", duration: 0.08 }, 0.17)
+                    // Phase 2: Shrink and move text to input position (15-20%)
+                    .to("#hero-text h2", {
+                        fontSize: "1.125rem",
+                        x: "-45%",
+                        y: "0",
+                        ease: "power2.inOut",
+                        duration: 0.05
+                    }, 0.15)
                     .to(globe.rotation, { y: "+=2", ease: "none" }, 0.15)
-                    // Phase 3: Globe fades slowly while chat is visible (25-70%)
+                    // Phase 3: Fade in chat box elements and hide hero text (20-25%)
+                    .to("#hero-text", { opacity: 0, duration: 0.02 }, 0.20)
+                    .to("#chat-input-field", { opacity: 1, duration: 0.02 }, 0.20)
+                    .to("#chat-form", { background: "rgba(31, 41, 55, 0.9)", borderColor: "rgba(55, 65, 81, 1)", boxShadow: "0 25px 50px -12px rgba(0, 0, 0, 0.25)", ease: "power1.out", duration: 0.05 }, 0.20)
+                    .to("#chat-input-bg", { opacity: 1, ease: "power1.out", duration: 0.05 }, 0.20)
+                    .to("#chat-button", { opacity: 1, ease: "power1.out", duration: 0.05 }, 0.20)
+                    .to("#chat-suggestions", { opacity: 1, ease: "power1.out", duration: 0.05 }, 0.22)
+                    // Phase 4: Globe fades slowly while chat is visible (25-70%)
                     .to("#globe-container", { opacity: 0, ease: "power2.inOut", duration: 0.45 }, 0.25)
                     .to(camera.position, { z: 150, ease: "power1.inOut" }, 0.25);
 
