--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <div id="globe-container"></div>
 
                 <div id="chat-input"
-                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-3xl px-6 z-20"
-                    style="transform: translate(-50%, -50%) scale(2.5);">
+                    class="absolute top-1/2 left-1/2 w-full max-w-3xl px-6 z-20"
+                    style="transform: translate(-50%, -50%) translateX(15%) scale(2.5);"></div>
                     <form id="chat-form" class="rounded-2xl p-6"
                         style="background: transparent; border: 1px solid transparent; box-shadow: none;">
                         <div class="flex items-center gap-4">
@@ -517,9 +517,10 @@
                     // Phase 1: Spin globe (0-15%)
                     .to(globe.rotation, { y: "+=2", ease: "none" }, 0)
                     .to(camera.position, { z: 180, ease: "power1.inOut" }, 0)
-                    // Phase 2: Scale down entire chat container and align text left (15-20%)
+                    // Phase 2: Scale down entire chat container, move to center, and align text left (15-20%)
                     .to("#chat-input", { 
                         scale: 1,
+                        x: "-50%",
                         ease: "power2.inOut", 
                         duration: 0.05 
                     }, 0.15)
@@ -580,10 +581,12 @@
                 }, 500);
             }
 
-            // Start rotating after chat input appears, then every 3 seconds
+            // Start rotating after chat box fully appears (after animation completes)
+            // Animation takes 3500px scroll at 20% = 700px for chat to appear
+            // Wait ~3 seconds for user to see it, then start cycling
             setTimeout(() => {
                 setInterval(rotatePlaceholder, 3000);
-            }, 2000);
+            }, 5000);
 
             // Handle chat form submission
             const chatForm = document.getElementById('chat-form');
