--- a/index.html
+++ b/index.html
@@ -110,28 +110,24 @@
             <!-- Globe Section -->
             <section class="relative" id="globe-section">
                 <div id="globe-container"></div>
-
+                <div id="globe-text"
+                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-white z-20 pointer-events-none">
+                    <h2 class="text-4xl md:text-6xl font-semibold text-gray-400">How can I help your shlichus today?</h2>
+                </div>
                 <div id="chat-input"
-                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-3xl px-6 z-20"
-                    style="transform: translate(-50%, -50%) scale(2.5);">
-                    <form id="chat-form" class="rounded-2xl p-6"
-                        style="background: transparent; border: 1px solid transparent; box-shadow: none;">
+                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-3xl px-6 z-20 opacity-0">
+                    <form id="chat-form"
+                        class="bg-gray-800/90 backdrop-blur-sm rounded-2xl shadow-2xl border border-gray-700 p-6">
                         <div class="flex items-center gap-4">
-                            <div class="flex-1 relative">
-                                <input id="chat-input-field" type="text"
-                                    placeholder="How can I help your shlichus today?"
-                                    class="w-full text-center text-white placeholder-gray-400 px-6 py-4 text-lg focus:outline-none"
-                                    style="background: transparent; border: 1px solid transparent; border-radius: 0.75rem;" />
-                                <div id="chat-input-bg"
-                                    class="absolute inset-0 bg-gray-900/50 border border-gray-600 rounded-xl opacity-0 pointer-events-none">
-                                </div>
-                            </div>
-                            <button id="chat-button" type="submit"
-                                class="bg-gray-700 hover:bg-gray-600 text-white font-semibold px-8 py-4 rounded-xl transition-colors opacity-0">
+                            <input id="chat-input-field" type="text"
+                                placeholder="How can I help your shlichus today?"
+                                class="flex-1 bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-6 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
+                            <button type="submit"
+                                class="bg-gray-700 hover:bg-gray-600 text-white font-semibold px-8 py-4 rounded-xl transition-colors">
                                 Ask
                             </button>
                         </div>
-                        <div id="chat-suggestions" class="mt-4 flex gap-2 flex-wrap opacity-0">
+                        <div class="mt-4 flex gap-2 flex-wrap">
                             <button type="button"
                                 class="text-xs bg-gray-700/50 text-gray-300 px-3 py-1 rounded-full hover:bg-gray-600/50 transition-colors suggestion-chip">Torah
                                 Study</button>
@@ -508,39 +504,25 @@
                     scrollTrigger: {
                         trigger: "#globe-section",
                         start: "top top",
-                        end: "+=3500",
+                        end: "+=4000",
                         scrub: 1,
                         pin: true,
-                        pinSpacing: true,
                         onUpdate: (self) => {
                             // Speed up rotation as user scrolls
                             currentRotationSpeed = baseRotationSpeed * (1 + self.progress * 4);
                         }
                     }
                 })
-                    // Phase 1: Spin globe (0-15%)
-                    .to(globe.rotation, { y: "+=2", ease: "none" }, 0)
+                    // Phase 1: Spin globe and fade out text (0-25%)
+                    .to(globe.rotation, { y: "+=3.14", ease: "none" }, 0)
                     .to(camera.position, { z: 180, ease: "power1.inOut" }, 0)
-                    // Phase 2: Scale down entire chat container and align text left (15-20%)
-                    .to("#chat-input", { 
-                        scale: 1,
-                        ease: "power2.inOut", 
-                        duration: 0.05 
-                    }, 0.15)
-                    .to("#chat-input-field", { 
-                        textAlign: "left",
-                        ease: "power2.inOut", 
-                        duration: 0.05 
-                    }, 0.15)
-                    .to(globe.rotation, { y: "+=2", ease: "none" }, 0.15)
-                    // Phase 3: Fade in chat box elements (20-25%)
-                    .to("#chat-form", { background: "rgba(31, 41, 55, 0.9)", borderColor: "rgba(55, 65, 81, 1)", boxShadow: "0 25px 50px -12px rgba(0, 0, 0, 0.25)", ease: "power1.out", duration: 0.05 }, 0.20)
-                    .to("#chat-input-bg", { opacity: 1, ease: "power1.out", duration: 0.05 }, 0.20)
-                    .to("#chat-button", { opacity: 1, ease: "power1.out", duration: 0.05 }, 0.20)
-                    .to("#chat-suggestions", { opacity: 1, ease: "power1.out", duration: 0.05 }, 0.22)
-                    // Phase 4: Globe fades slowly while chat is visible (25-70%)
-                    .to("#globe-container", { opacity: 0, ease: "power2.inOut", duration: 0.45 }, 0.25)
-                    .to(camera.position, { z: 150, ease: "power1.inOut" }, 0.25);
+                    .to("#globe-text", { opacity: 0, scale: 0.8, ease: "power1.in" }, 0.15)
+                    // Phase 2: Fade in chat input quickly (25-40%)
+                    .to("#chat-input", { opacity: 1, scale: 1, ease: "power1.out", duration: 0.2 }, 0.3)
+                    .to(globe.rotation, { y: "+=3.14", ease: "none" }, 0.25)
+                    // Phase 3: Chat stays prominent, globe fades VERY slowly (40-100%)
+                    .to("#globe-container", { opacity: 0, ease: "power2.inOut", duration: 0.6 }, 0.5)
+                    .to(camera.position, { z: 150, ease: "power1.inOut" }, 0.5);
 
                 window.addEventListener('resize', () => {
                     camera.aspect = globeContainer.offsetWidth / globeContainer.offsetHeight;
