fixed images, moved hero text

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <section class="relative" id="globe-section">
                 <div id="globe-container"></div>
                 <div id="globe-text"
-                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-white z-20 pointer-events-none">
+                    class="absolute top-[20%] left-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-white z-20 pointer-events-none">
                     <h2 class="text-4xl md:text-6xl font-semibold text-gray-400">How can I help your shlichus today?</h2>
                 </div>
                 <div id="chat-input"
@@ -513,11 +513,14 @@
                         }
                     }
                 })
-                    // Phase 1: Spin globe and fade out text (0-25%)
+                    // Phase 0: Move text to center and globe up (0-15%)
+                    .to("#globe-text", { top: "50%", ease: "power2.inOut" }, 0)
+                    .to(globe.position, { y: 0, ease: "power2.inOut" }, 0)
+                    // Phase 1: Spin globe and fade out text (15-30%)
                     .to(globe.rotation, { y: "+=3.14", ease: "none" }, 0)
                     .to(camera.position, { z: 180, ease: "power1.inOut" }, 0)
-                    .to("#globe-text", { opacity: 0, scale: 0.8, ease: "power1.in" }, 0.15)
-                    // Phase 2: Fade in chat input quickly (25-40%)
+                    .to("#globe-text", { opacity: 0, scale: 0.8, ease: "power1.in" }, 0.2)
+                    // Phase 2: Fade in chat input quickly (30-40%)
                     .to("#chat-input", { opacity: 1, scale: 1, ease: "power1.out", duration: 0.2 }, 0.3)
                     .to(globe.rotation, { y: "+=3.14", ease: "none" }, 0.25)
                     // Phase 3: Chat stays prominent, globe fades VERY slowly (40-100%)
