changed font hero

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             font-family: 'Dosis', sans-serif;
         }
         
+        #globe-text h2 {
+            font-family: 'Kanit', sans-serif;
+        }
+        
         .image-hover-container {
             overflow: hidden;
         }
@@ -124,7 +128,7 @@
                 <div id="globe-container"></div>
                 <div id="globe-text"
                     class="absolute top-[15%] left-0 lg:left-[20%] text-left text-white z-20 pointer-events-none px-6">
-                    <h2 class="text-3xl md:text-4xl lg:text-5xl font-semibold text-gray-400 whitespace-nowrap">How can I help your shlichus today?</h2>
+                    <h2 class="text-3xl md:text-4xl lg:text-5xl font-medium text-gray-400 whitespace-nowrap">How can I help your shlichus today?</h2>
                 </div>
                 <div id="chat-input"
                     class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-5xl px-6 z-20 opacity-0">
