--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
         
         .image-hover-zoom {
-            transition: transform 0.3s ease;
+            transition: transform 0.5s ease, opacity 0.5s ease;
         }
         
         .image-hover-container:hover .image-hover-zoom {
