edited hero text

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <section class="relative" id="globe-section">
                 <div id="globe-container"></div>
                 <div id="globe-text"
-                    class="absolute top-[15%] left-0 lg:left-[20%] text-left text-white z-20 pointer-events-none px-6">
-                    <h2 class="text-3xl md:text-4xl lg:text-5xl font-light text-gray-400 whitespace-nowrap">How can I help you with your shlichus today?</h2>
+                    class="absolute top-[15%] left-1/2 -translate-x-1/2 text-center text-white z-20 pointer-events-none px-6">
+                    <h2 class="text-3xl md:text-4xl lg:text-5xl font-extralight text-white whitespace-nowrap">How can I help you with your shlichus today?</h2>
                 </div>
                 <div id="chat-input"
                     class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-5xl px-6 z-20 opacity-0">
