--- a/index.html
+++ b/index.html
@@ -552,12 +552,12 @@
                     // Phase 0: Move globe up and scale to normal size (0-15%)
                     .to(globe.position, { y: 0, ease: "power2.inOut" }, 0)
                     .to(globe.scale, { x: 1, y: 1, z: 1, ease: "power2.inOut" }, 0)
-                    // Phase 1: Spin globe and fade out text (15-30%)
+                    // Phase 1: Spin globe (15-30%)
                     .to(globe.rotation, { y: "+=3.14", ease: "none" }, 0)
                     .to(camera.position, { z: 180, ease: "power1.inOut" }, 0)
-                    .to("#globe-text", { opacity: 0, ease: "power1.in" }, 0.2)
-                    // Phase 2: Fade in chat input quickly (30-40%)
-                    .to("#chat-input", { opacity: 1, scale: 1, ease: "power1.out", duration: 0.2 }, 0.3)
+                    // Phase 2: Fade out text as chat fades in (30-40%)
+                    .to("#globe-text", { opacity: 0, ease: "power1.inOut", duration: 0.1 }, 0.3)
+                    .to("#chat-input", { opacity: 1, scale: 1, ease: "power1.inOut", duration: 0.1 }, 0.3)
                     .to(globe.rotation, { y: "+=3.14", ease: "none" }, 0.25)
                     // Phase 3: Chat stays prominent, globe fades VERY slowly (40-100%)
                     .to("#globe-container", { opacity: 0, ease: "power2.inOut", duration: 0.6 }, 0.5)
